yfirlit lagad aftur

--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
     <h1>verkefna listi</h1>
     <ul>
-        <li><a href="/verk-1/index.html">verkefni 1</a></li>
-        <li><a href="/verk-2/index.html">verkefni 2</a></li>
+        <li><a href="/vef1/verk-1/index.html">verkefni 1</a></li>
+        <li><a href="/vef1/verk-2/index.html">verkefni 2</a></li>
     </ul>
     
 </body>
