lagad fyrir validator

--- a/verk-2/sidur/skraning.html
+++ b/verk-2/sidur/skraning.html
@@ -28,10 +28,10 @@
                     <option value="vidburd b">
                     <option value="vidburd c">
                 </datalist>
-                <label for="date">Hvenær?</label>
-                <input type="date">
-                <label for="time">Klukkan hvað?</label>
-                <input type="time" min="10:00" max="24:00">
+                <label for="dags">Hvenær?</label>
+                <input id="dags" type="date">
+                <label for="timi">Klukkan hvað?</label>
+                <input id="timi" type="time" min="10:00" max="23:59">
                 <label for="fjoldi">Hve mörg?</label>
                 <input list="fjoldi">
                 <datalist id="fjoldi">
@@ -57,10 +57,10 @@
                     <option value="Kaffi og kaka">
                     <option value="Engan mat">
                 </datalist>
-                <label for="checkbox">Ofnæmi?</label>
-                <input type="checkbox">
+                <label for="box">Ofnæmi?</label>
+                <input id="box" type="checkbox">
                 <label for="annad">Annað sem við eigum að vita?</label>
-                <input type="text">
+                <input id="annad" type="text">
 
                 <h2>Þínar Upplýsingar</h2>
                 <label for="nafn">Nafn</label>
