--- a/verk-2/sidur/spil.html
+++ b/verk-2/sidur/spil.html
@@ -18,7 +18,7 @@
             <li><a href="skraning.html">Skráning á viðburði</a></li>
         </ul>
         <main id="#maincontent">
-        <table border="1">
+        <table>
             <caption>Hjá Spilabúðinni eigum við öll helstu spilin! Hér eru vinsælustu spilin hjá okkur:</caption>
             <thead>
                 <tr>
