skraning lagad, skipti datalist i select

--- a/verk-2/index.html
+++ b/verk-2/index.html
@@ -12,7 +12,7 @@
         <h1>
             Spilabúðin
         </h1>
-        <a href="#main">Beint í efni</a>
+        <a href="#maincontent">Beint í efni</a>
         <nav>
             <ul>
                 <li><a href="">Forsíða Spilabúðarinnar</a></li>
