--- a/verk-2/sidur/skraning.html
+++ b/verk-2/sidur/skraning.html
@@ -22,41 +22,38 @@
             <p>Skráðu þig á viðburði hjá okkur!</p>
             <form>
                 <label for="vidburdir">Hvaða viðburð viltu koma á?</label>
-                <input list="vidburdir">
-                <datalist id="vidburdir">
-                    <option value="vidburd a">
-                    <option value="vidburd b">
-                    <option value="vidburd c">
-                </datalist>
+                <select name="vidburdir" id="vidburdir">
+                    <option value="a">Viðburður a</option>
+                    <option value="b">Viðburður b</option>
+                    <option value="c">Viðburður c</option>
+                </select>
                 <label for="dags">Hvenær?</label>
                 <input id="dags" type="date">
                 <label for="timi">Klukkan hvað?</label>
                 <input id="timi" type="time" min="10:00" max="23:59">
                 <label for="fjoldi">Hve mörg?</label>
-                <input list="fjoldi">
-                <datalist id="fjoldi">
-                    <option value="1">
-                    <option value="2">
-                    <option value="3">
-                    <option value="4">
-                    <option value="5">
-                    <option value="6">
-                    <option value="7">
-                    <option value="8">
-                    <option value="9">
-                    <option value="10">
-                </datalist>
+                <select id="fjoldi">
+                    <option value="1">1</option>
+                    <option value="2">2</option>
+                    <option value="3">3</option>
+                    <option value="4">4</option>
+                    <option value="5">5</option>
+                    <option value="6">6</option>
+                    <option value="7">7</option>
+                    <option value="8">8</option>
+                    <option value="9">9</option>
+                    <option value="10">10</option>
+                    </select>
                 <label for="takaFram">Viltu taka eitthvað fram?</label>
                 <input id="takaFram" type="text">
 
                 <h2>Panta mat</h2>
                 <label for="matur">Viltu einhvern mat?</label>
-                <input list="matur">
-                <datalist id="matur">
-                    <option value="Pizzusneið og gos">
-                    <option value="Kaffi og kaka">
-                    <option value="Engan mat">
-                </datalist>
+                <select id="matur">
+                    <option value="Pizzusneið og gos">Pizzusneið og gos</option>
+                    <option value="Kaffi og kaka">Kaffi og kaka</option>
+                    <option value="Engan mat">Engan mat</option>
+                    </select>
                 <label for="box">Ofnæmi?</label>
                 <input id="box" type="checkbox">
                 <label for="annad">Annað sem við eigum að vita?</label>
