--- a/verk-2/sidur/skraning.html
+++ b/verk-2/sidur/skraning.html
@@ -93,7 +93,8 @@
                         <dt>Sunnudaga</dt>
                         <dd>12:00–22:00</dd>
                     </dl>
-
+                </section>
+                <section>
                     <h2>Hér erum við</h2>
                     <p>
                         Spilabúðin ehf.
@@ -102,7 +103,8 @@
                         Sími 123-4567
                         spilabudin@example.org
                     </p>
-
+                </section
+                <section>
                     <h2>Samfélagsmiðlar</h2>
                     <a href="https://www.facebook.com/HaskoliIslands/">Facebook</a>
                     <a href="https://www.youtube.com/user/HIvarp">Youtube</a>
