--- a/verk-2/sidur/spil.html
+++ b/verk-2/sidur/spil.html
@@ -175,36 +175,38 @@
     
       <footer>
           <nav>
-              <section>
-                  <h2>Opnunartími</h2>
-                  <dl>
-                      <dt>Mánudagar</dt>
-                      <dd>Lokað</dd>
-                      <dt>Þriðjudagar til fimmtudags</dt>
-                      <dd>14:00–22:00</dd>
-                      <dt>Föstudaga</dt>
-                      <dd>14:00–00:00</dd>
-                      <dt>Laugardaga</dt>
-                      <dd>12:00–00:00</dd>
-                      <dt>Sunnudaga</dt>
-                      <dd>12:00–22:00</dd>
-                  </dl>
-
-                  <h2>Hér erum við</h2>
-                  <p>
-                      Spilabúðin ehf.
-                      Spilgata 1
-                      101 Reykjavík
-                      Sími 123-4567
-                      spilabudin@example.org
-                  </p>
-
-                  <h2>Samfélagsmiðlar</h2>
-                  <a href="https://www.facebook.com/HaskoliIslands/">Facebook</a>
-                  <a href="https://www.youtube.com/user/HIvarp">Youtube</a>
-                  <a href="https://www.instagram.com/haskoli_islands/">Instagram</a>
-              </section>
-          </nav>
+                <section>
+                    <h2>Opnunartími</h2>
+                    <dl>
+                        <dt>Mánudagar</dt>
+                        <dd>Lokað</dd>
+                        <dt>Þriðjudagar til fimmtudags</dt>
+                        <dd>14:00–22:00</dd>
+                        <dt>Föstudaga</dt>
+                        <dd>14:00–00:00</dd>
+                        <dt>Laugardaga</dt>
+                        <dd>12:00–00:00</dd>
+                        <dt>Sunnudaga</dt>
+                        <dd>12:00–22:00</dd>
+                    </dl>
+                </section>
+                <section>
+                    <h2>Hér erum við</h2>
+                    <p>
+                        Spilabúðin ehf.
+                        Spilgata 1
+                        101 Reykjavík
+                        Sími 123-4567
+                        spilabudin@example.org
+                    </p>
+                </section
+                <section>
+                    <h2>Samfélagsmiðlar</h2>
+                    <a href="https://www.facebook.com/HaskoliIslands/">Facebook</a>
+                    <a href="https://www.youtube.com/user/HIvarp">Youtube</a>
+                    <a href="https://www.instagram.com/haskoli_islands/">Instagram</a>
+                </section>
+            </nav>
       </footer>
     </body>
 </html>
