--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <ul>
         <li><a href="/vef1/verk-1/index.html">verkefni 1</a></li>
         <li><a href="/vef1/verk-2/index.html">verkefni 2</a></li>
+        <li><a href="/vef1/verk-3/index.html">verkefni 3</a></li>
     </ul>
     
 </body>
