indents i html sidum

--- a/verk-3/index.html
+++ b/verk-3/index.html
@@ -24,9 +24,12 @@
                     <li><a href="sidur/skraning.html">Skráning á viðburði</a></li>
                 </ul>
             </nav>
+
             <main id="maincontent">
                 <section class="vinstriContent">
-                    <section><p>Spilabúðin selur spil, heldur viðburði og býður upp á skemmtilega stund. <br>Kíktu á okkur á Spilagötu 1.</p></section>
+                    <section>
+                        <p>Spilabúðin selur spil, heldur viðburði og býður upp á skemmtilega stund. <br>Kíktu á okkur á Spilagötu 1.</p>
+                    </section>
 
                     <section>
                         <h2>Spil</h2>
@@ -45,6 +48,7 @@
                         </p>
                     </section>
                 </section>
+                
                 <section class="haegriContent">
                     <img alt="Spilabúðin" src="myndir/spilabudin.jpg">
                 </section>
