--- a/verk-4/index.html
+++ b/verk-4/index.html
@@ -32,26 +32,27 @@
 
       <main id="efni">
         <div class="content">
-          <section>
-            <img src="./myndir/spilabudin.jpg"
-            alt="Inngangur að Spilabúðinni, blámálað hús með stórum gluggum. Í gluggunum eru litríkir hlutir. Fyrir framan húsið er hjól.">
-
+          <section class="section-box">
             <p>Spilabúðin selur spil, heldur viðburði og býður upp á skemmtilega stund. Kíktu á okkur á Spilagötu 1.</p>
+            <img class="efsta-mynd" src="./myndir/spilabudin.jpg"
+            alt="Inngangur að Spilabúðinni, blámálað hús með stórum gluggum. Í gluggunum eru litríkir hlutir. Fyrir framan húsið er hjól.">
           </section>
 
           <div class="section-box">
-            <section>
+            <section class="efri-card">
               <h3>Spil</h3>
-              <p>Við seljum allskonar spil fyrir allskonar fólk. </p>
+              <div class="texta-box"><p>Við seljum allskonar spil fyrir allskonar fólk. </p></div>
+              <div class="button-box">
                 <button onclick="location.href='./sidur/spil.html'">Skoða spil</button>
+              </div>
             </section>
 
-            <section>
+            <section class="efri-card">
               <h3>Viðburðir</h3>
-              <p>Við höldum reglulega viðburði.</p>
+              <div class="texta-box"><p>Við höldum reglulega viðburði.</p></div>
               <div class="button-box">
-              <button onclick="location.href='./sidur/vidburdir.html'">Skoðaðu viðburði</button>
-              <button onclick="location.href='./sidur/skraning.html'">Skráðu mig á viðburð</button>
+                <button onclick="location.href='./sidur/vidburdir.html'">Skoðaðu viðburði</button>
+                <button onclick="location.href='./sidur/skraning.html'">Skráðu mig á viðburð</button>
               </div>
             </section>
           </div>
@@ -63,21 +64,25 @@
 
             <section class="card">
               <div class="image"><img src="./myndir/brass.jpg"></div>
-              <h3>Brass: Birmingham</h3>
-              <div class="texta-box"><p>Ný komið aftur! Klassískt spil sem fær 8,41 í einkunn hjá BoardGameGeek.</p></div>
-              <div class="button-box">
-                <button onclick="location.href=''">Skoða spil</button>
-                <button onclick="location.href=''">Setja í körfu</button>
+              <div class="texti-og-takkar">
+                <h3>Brass: Birmingham</h3>
+                <div class="texta-box"><p>Ný komið aftur! Klassískt spil sem fær 8,41 í einkunn hjá BoardGameGeek.</p></div>
+                <div class="button-box">
+                  <button onclick="location.href=''">Skoða spil</button>
+                  <button onclick="location.href=''">Setja í körfu</button>
+                </div>
               </div>
             </section>
 
             <section class="card">
               <div class="image"><img src="./myndir/pandemic.jpg"></div>
-              <h3>Pandemic Legacy</h3>
-              <div class="texta-box"><p>Getið þið unnið saman til að stöðva heimsfaraldur? Spil sem fær 8,37 í einkunn hjá BoardGameGeek.</p></div>
-              <div class="button-box">
-                <button onclick="location.href=''">Skoða spil</button>
-                <button onclick="location.href=''">Setja í körfu</button>
+              <div class="texti-og-takkar">
+                <h3>Pandemic Legacy</h3>
+                <div class="texta-box"><p>Getið þið unnið saman til að stöðva heimsfaraldur? Spil sem fær 8,37 í einkunn hjá BoardGameGeek.</p></div>
+                <div class="button-box">
+                  <button onclick="location.href=''">Skoða spil</button>
+                  <button onclick="location.href=''">Setja í körfu</button>
+                </div>
               </div>
               </section>
 
