--- a/verk-4/sidur/vidburdir.html
+++ b/verk-4/sidur/vidburdir.html
@@ -18,42 +18,57 @@
     </header>
 
     <p class="sr-only"><a href="#efni">Beint í efni</a></p>
+    <div class="navOgEfni">
+      <nav>
+        <ul>
+          <li><a href="../index.html">Forsíða</a></li>
+          <li><a href="./spil.html">Spil</a></li>
+          <li><strong>Viðburðir</strong></li>
+          <li><a href="./skraning.html">Skráning á viðburði</a></li>
+        </ul>
+      </nav>
 
-    <nav>
-      <ul>
-        <li><a href="../index.html">Forsíða</a></li>
-        <li><a href="./spil.html">Spil</a></li>
-        <li><strong>Viðburðir</strong></li>
-        <li><a href="./skraning.html">Skráning á viðburði</a></li>
-      </ul>
-    </nav>
+      <main id="efni">
+        <div class="vidburdir-content">
+          <section class="card">
+            <div class="image">
+              <img src="../myndir/puzzle.jpg" alt="Mynd af borði með hálfkláruðu púsluspili, hönd bendir á stakt púsl."
+                width="200">
+            </div>
+            <div class="texti-og-takkar">
+            <h3 class="title">Púslukvöld</h3>
+            <div class="content">
+              
+              <div class="texta-box"><p>Komdu á púslukvöld í spilabúðina. Við bjóðum upp á púsluspil og góða stemningu. Byrjum snemma og endum
+                seint.
+                Allt frá 50 bitum upp í 5000 bita púsl.</p></div>
+            </div>
+            <div class="button-box">
+              <button onclick="location.href='./skraning.html'">Skrá mig á púslukvöld</button>
+            </div>
+          </div>
+          </section>
 
-    <main id="efni">
-      <section class="event">
-        <h3 class="title">Púslukvöld</h3>
-        <div class="content">
-          <img src="../myndir/puzzle.jpg" alt="Mynd af borði með hálfkláruðu púsluspili, hönd bendir á stakt púsl."
-            width="200">
-          <p>Komdu á púslukvöld í spilabúðina. Við bjóðum upp á púsluspil og góða stemningu. Byrjum snemma og endum
-            seint.
-            Allt frá 50 bitum upp í 5000 bita púsl.</p>
+          <section class="card">
+            <div class="image">
+              <img src="../myndir/ticket-to-ride.jpg" alt="Mynd af spilaborði Ticket to Ride, hönd setur niður lestarvagn."
+                width="200"></div>
+            <div class="texti-og-takkar">
+              <h3 class="title">Ticket to Ride</h3>
+              <div class="content">
+                <div class="texta-box"><p>Elskar þú lestir og leiki? Komdu á Ticket to Ride viðburð í spilabúðina. Spilum allan daginn, bókaðu
+                  klukkustund eða lengur.</p></div>
+              </div>
+              <div class="button-box">
+                <button onclick="location.href='./skraning.html'">Skrá mig á Ticket to Ride</button>
+              </div>
+            </div>
+          </section>
+
         </div>
-        <p class="register"><a href="./skraning.html">Skrá mig á púslukvöld</a>.</p>
-      </section>
-
-      <section class="event">
-        <h3 class="title">Ticket to Ride</h3>
-        <div class="content">
-          <img src="../myndir/ticket-to-ride.jpg" alt="Mynd af spilaborði Ticket to Ride, hönd setur niður lestarvagn."
-            width="200">
-          <p>Elskar þú lestir og leiki? Komdu á Ticket to Ride viðburð í spilabúðina. Spilum allan daginn, bókaðu
-            klukkustund eða lengur.</p>
-        </div>
-        <p class="register"><a href="./skraning.html">Skrá mig á Ticket to Ride</a>.</p>
-      </section>
-
-      <p class="back"><a href="../index.html">Aftur á forsíðu</a>.</p>
-    </main>
+        <p class="back"><a href="../index.html">Aftur á forsíðu</a>.</p>
+      </main>
+    </div>
 
     <footer>
       <section>
