--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
         <li><a href="/vef1/verk-1/index.html">verkefni 1</a></li>
         <li><a href="/vef1/verk-2/index.html">verkefni 2</a></li>
         <li><a href="/vef1/verk-3/index.html">verkefni 3</a></li>
+        <li><a href="/vef1/verk-4/index.html">verkefni 4</a></li>
     </ul>
     
 </body>
