--- a/verk-5/sidur/spil.html
+++ b/verk-5/sidur/spil.html
@@ -3,6 +3,8 @@
 
 <head>
   <link rel="stylesheet" href="../styles.css">
+  <link rel="stylesheet" href="../grid.css">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta charset="utf-8">
   <title>Spilabúðin—Spil</title>
   <meta name="description" content="Spilaúrval hjá Spilabúðinni">
@@ -18,17 +20,20 @@
     </header>
 
     <p class="sr-only"><a href="#efni">Beint í efni</a></p>
-    <div class="navOgEfni">
-      <nav>
-        <ul>
-          <li><a href="../index.html">Forsíða</a></li>
-          <li><strong>Spil</strong></li>
-          <li><a href="./vidburdir.html">Viðburðir</a></li>
-          <li><a href="./skraning.html">Skráning á viðburði</a></li>
-        </ul>
-      </nav>
+    <div class="efni-wrapper">
+      <div class="nav-wrapper">
+        <nav>
+          <ul>
+            <li><a href="../index.html">Forsíða</a></li>
+            <li><strong>Spil</strong></li>
+            <li><a href="./vidburdir.html">Viðburðir</a></li>
+            <li><a href="./skraning.html">Skráning á viðburði</a></li>
+          </ul>
+        </nav>
+      </div>
 
       <main id="efni">
+        <div class="table-container">
         <p>Hjá Spilabúðinni eigum við öll helstu spilin! Hér eru vinsælustu spilin hjá okkur:</p>
 
         <table>
@@ -164,46 +169,50 @@
         </table>
 
         <p class="back"><a href="../index.html">Aftur á forsíðu</a>.</p>
+        </div>
       </main>
     </div>
+
     <footer>
-      <section>
-        <h2>Opnunartími</h2>
-        <dl>
-          <dt>Mánudagar</dt>
-          <dd>Lokað</dd>
-          <dt>Þriðjudagar til fimmtudags</dt>
-          <dd>14:00–22:00</dd>
-          <dt>Föstudaga</dt>
-          <dd>14:00–00:00</dd>
-          <dt>Laugardaga</dt>
-          <dd>12:00–00:00</dd>
-          <dt>Sunnudaga</dt>
-          <dd>12:00–22:00</dd>
-        </dl>
-      </section>
+      <div class="footer-wrapper">
+        <section>
+          <h2>Opnunartími</h2>
+          <dl>
+            <dt>Mánudagar</dt>
+            <dd>Lokað</dd>
+            <dt>Þriðjudagar til fimmtudags</dt>
+            <dd>14:00–22:00</dd>
+            <dt>Föstudaga</dt>
+            <dd>14:00–00:00</dd>
+            <dt>Laugardaga</dt>
+            <dd>12:00–00:00</dd>
+            <dt>Sunnudaga</dt>
+            <dd>12:00–22:00</dd>
+          </dl>
+        </section>
 
-      <section>
-        <h2>Hér erum við</h2>
-        <ul>
-          <li>Spilabúðin ehf.</li>
-          <li>Spilagata 1 10</li>
-          <li>101 Reykjavík</li>
-          <li><a href="tel:1234567">Sími 123-4567</a></li>
-          <li>
-            <a href="mailto:spilabudin@example.org">spilabudin@example.org</a>
-          </li>
-        </ul>
-      </section>
+        <section>
+          <h2>Hér erum við</h2>
+          <ul>
+            <li>Spilabúðin ehf.</li>
+            <li>Spilagata 1 10</li>
+            <li>101 Reykjavík</li>
+            <li><a href="tel:1234567">Sími 123-4567</a></li>
+            <li>
+              <a href="mailto:spilabudin@example.org">spilabudin@example.org</a>
+            </li>
+          </ul>
+        </section>
 
-      <section>
-        <h2>Samfélagsmiðlar</h2>
-        <ul>
-          <li><a href="https://www.facebook.com/HaskoliIslands/">Facebook</a></li>
-          <li><a href="https://www.youtube.com/user/HIvarp">YouTube</a></li>
-          <li><a href="https://www.instagram.com/haskoli_islands/">Instagram</a></li>
-        </ul>
-      </section>
+        <section>
+          <h2>Samfélagsmiðlar</h2>
+          <ul>
+            <li><a href="https://www.facebook.com/HaskoliIslands/">Facebook</a></li>
+            <li><a href="https://www.youtube.com/user/HIvarp">YouTube</a></li>
+            <li><a href="https://www.instagram.com/haskoli_islands/">Instagram</a></li>
+          </ul>
+        </section>
+      </div>
     </footer>
   </div>
 </body>
