--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
         <li><a href="/vef1/verk-2/index.html">verkefni 2</a></li>
         <li><a href="/vef1/verk-3/index.html">verkefni 3</a></li>
         <li><a href="/vef1/verk-4/index.html">verkefni 4</a></li>
+        <li><a href="/vef1/verk-5/index.html">verkefni 5</a></li>
     </ul>
     
 </body>
